Fixed the tests and all tests implemented in spock